# non-grata-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5d3328133717_update_entity_model.py  70c8bb956c34_create_entities_table.py  7395869d33e5_init.py
app/: main.py
app/api/: search.py  user.py
app/db/: session.py
app/models/: entity.py
app/schemas/: search.py
app/tasks/: celery_app.py  parse.py  worker.py
app/utils/: risk.py
